--- a/FLogS.csproj
+++ b/FLogS.csproj
@@ -4,7 +4,7 @@
 	<OutputType>WinExe</OutputType>
 	<TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
 	<Nullable>enable</Nullable>
-	<ImplicitUsings>enable</ImplicitUsings>
+	<ImplicitUsings>disable</ImplicitUsings>
 	<UseWPF>true</UseWPF>
 	<Title>FLogS</Title>
 	<Version>1.1.4</Version>
