--- a/FLogS.csproj
+++ b/FLogS.csproj
@@ -23,7 +23,13 @@
 	<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMdd"))</SourceRevisionId>
 	<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
 	<NeutralLanguage>en-US</NeutralLanguage>
+	<PackageIcon>favicon.png</PackageIcon>
+	<ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <Content Include="favicon.ico" />
+  </ItemGroup>
   
   <ItemGroup>
 	<Compile Update="Properties\Settings.Designer.cs">
@@ -34,6 +40,10 @@
   </ItemGroup>
   
   <ItemGroup>
+	<None Update="favicon.png">
+	  <Pack>True</Pack>
+	  <PackagePath>\</PackagePath>
+	</None>
 	<None Update="Properties\Settings.settings">
 	  <Generator>SettingsSingleFileGenerator</Generator>
 	  <LastGenOutput>Settings.Designer.cs</LastGenOutput>
