--- a/FLogS.csproj
+++ b/FLogS.csproj
@@ -7,7 +7,7 @@
 	<ImplicitUsings>disable</ImplicitUsings>
 	<UseWPF>true</UseWPF>
 	<Title>FLogS</Title>
-	<Version>1.1.4.5</Version>
+	<Version>1.1.4.6</Version>
 	<Authors>Taica</Authors>
   </PropertyGroup>
 
@@ -27,6 +27,8 @@
 	<ApplicationIcon>favicon.ico</ApplicationIcon>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<RepositoryUrl>https://github.com/Taicanium/FLogS</RepositoryUrl>
+	<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+	<AnalysisLevel>none</AnalysisLevel>
   </PropertyGroup>
   
   <ItemGroup>
